# paper2ppt

./: .gitignore  README.md  demo.py  paper_summary.pptx  pyproject.toml  r.py
resources/: generated_ppt.md  论文主要内容.md  论文阅读：Benchmark of Machine Learning Force Fields for.docx
src/paper2ppt/configs/: path_config.py  referce_parser_configs.py  settings.py
src/paper2ppt/content_generator/: generator.py
src/paper2ppt/flow_manager/: manager.py
src/paper2ppt/llm/: openai_llm.py
src/paper2ppt/paper_parser/: pdf_parser.py  reference_parser.py
src/paper2ppt/prompt_builder/: base_prompt.py  imitation_prompt.py  output_language.py
